[package]
name = "massa_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
thiserror = "1.0"
tonic = "0.8.3"
prost = "0.11.6"
futures-util = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"
# custom modules
massa_consensus_exports = { path = "../massa-consensus-exports" }
massa_hash = { path = "../massa-hash" }
massa_models = { path = "../massa-models" }
massa_network_exports = { path = "../massa-network-exports" }
massa_pool_exports = { path = "../massa-pool-exports" }
massa_protocol_exports = { path = "../massa-protocol-exports" }
massa_execution_exports = { path = "../massa-execution-exports" }
massa_time = { path = "../massa-time" }
massa_wallet = { path = "../massa-wallet" }

[build-dependencies]
tonic-build = "0.8.4"
